--- a/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
@@ -14,18 +14,15 @@
             </MudItem>
 
             <MudItem xs="6" sm="3" lg="2">
-                <MudStack Class="mt-3" Justify="Justify.Center" Row>
-                    <MudText Class="mr-n1">@Localizer["languageAuto"]</MudText>
+                <MudStack Class="mt-3" AlignItems="AlignItems.Center" Row>
+                    <MudCheckBox T="bool" Class="mr-n1" Label="@Localizer["languageAuto"]" Value="@_fromBrowserCulture" ValueChanged="OnBrowserCultureChangedAsync" />
                     <MudTooltip Text="@Localizer["languageAuto_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
                 </MudStack>
             </MudItem>
-            <MudItem xs="6" md="5" lg="4">
-                <MudCheckBox T="bool" Value="_fromBrowserCulture" ValueChanged="OnBrowserCultureChangedAsync" />
-            </MudItem>
-            <div class="end-spacer mud-grid-item mud-grid-item-sm-3 mud-grid-item-md-4 mud-grid-item-lg-6" />     @* Replaces <MudItem xs="0" sm="3" md="4" lg="6" /> because on a component CSS isolation isn't working as it should *@
+            <MudItem xs="6" sm="9" lg="10" />
 
             <MudItem xs="6" sm="3" lg="2">
-                <MudStack Class="mt-3" Justify="Justify.Center" Row>
+                <MudStack Class="mt-3" Row>
                     <MudText Class="mr-n1">@Localizer["language"]</MudText>
                     <MudTooltip Text="@Localizer["language_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
                 </MudStack>
@@ -36,7 +33,7 @@
                     {
                         <MudSelectItem Value="culture">
                             <MudStack AlignItems="AlignItems.Center" Row>
-                                <MudImage Height="30" Src="@Assets[$"_content/SchulCloud.Frontend/{culture.Name.Replace('-', '_')}.svg"]" Alt="@culture.Name" />
+                                <MudImage Height="30" Src="@GetFlagImgUrl(culture)" Alt="@culture.Name" />
                                 @culture.NativeName
                             </MudStack>
                         </MudSelectItem>
@@ -57,7 +54,7 @@
                     {
                         <MudSelectItem Value="culture">
                             <MudStack AlignItems="AlignItems.Center" Row>
-                                <MudImage Height="30" Src="@Assets[$"/_content/SchulCloud.Frontend/{culture.Name.Replace('-', '_')}.svg"]" Alt="@culture.Name" />
+                                <MudImage Height="30" Src="@GetFlagImgUrl(culture)" Alt="@culture.Name" />
                                 @culture.NativeName
                             </MudStack>
                         </MudSelectItem>
