Some minor improvements -Fixed a style issue in Settings.razor -Summazied multiple small extensions classes into a single general one -Added an redirect for the default favicon location -Improved the structure and generation of the web assets

--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="@Assets["/_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <link href="@Assets["/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css"]" rel="stylesheet" />
-    <link href="@Assets["/_content/SchulCloud.Frontend/SchulCloud.Frontend.styles.css"]" rel="stylesheet" />
+    <link href="@Assets["/_content/SchulCloud.Frontend.styles.css"]" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 
     <script src="/_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
     <script src="@Assets["/_content/MudBlazor/MudBlazor.min.js"]" data-cookie-consent="strictly-necessary"></script>
-    <script src="@Assets["/_content/SchulCloud.Frontend/SchulCloud.Frontend.min.js"]" data-cookie-consent="strictly-necessary"></script>
+    <script src="@Assets["/_content/Frontend.min.js"]" data-cookie-consent="strictly-necessary"></script>
 </body>
 
 </html>
