--- a/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
@@ -22,7 +22,7 @@
             <MudItem xs="6" sm="9" lg="10" />
 
             <MudItem xs="6" sm="3" lg="2">
-                <MudStack Class="mt-3" Row>
+                <MudStack Class="mt-3" Justify="Justify.Center" Row>
                     <MudText Class="mr-n1">@Localizer["language"]</MudText>
                     <MudTooltip Text="@Localizer["language_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
                 </MudStack>
