Updated all NuGet packages -Fixed a rollup missconfig

--- a/SchulCloud.Frontend/Components/Layouts/MainLayout.razor
+++ b/SchulCloud.Frontend/Components/Layouts/MainLayout.razor
@@ -33,18 +33,18 @@
             </ActivatorContent>
             <ChildContent>
                 <MudMenuItem Href="@Routes.AccountOverview()" Icon="@MaterialSymbols.Outlined.AccountCircle">
-                    <MudText Class="ml-n5">@Localizer["accountNav_Account"]</MudText>
+                    <MudText Class="mr-3">@Localizer["accountNav_Account"]</MudText>
                 </MudMenuItem>
                 <MudMenuItem Href="@Routes.AccountSettings()" Icon="@MaterialSymbols.Outlined.Settings">
-                    <MudText Class="ml-n5">@Localizer["accountNav_Settings"]</MudText>
+                    <MudText Class="mr-3">@Localizer["accountNav_Settings"]</MudText>
                 </MudMenuItem>
                 <MudMenuItem Href="@Routes.SecurityOverview()" Icon="@MaterialSymbols.Outlined.Security">
-                    <MudText Class="ml-n5">@Localizer["accountNav_Security"]</MudText>
+                    <MudText Class="mr-3">@Localizer["accountNav_Security"]</MudText>
                 </MudMenuItem>
 
                 <MudDivider />
                 <MudMenuItem Href="@Routes.Logout()" Icon="@MaterialSymbols.Outlined.Logout" ForceLoad>
-                    <MudText Class="ml-n5">@Localizer["accountNav_SignOut"]</MudText>
+                    <MudText Class="mr-3">@Localizer["accountNav_SignOut"]</MudText>
                 </MudMenuItem>
             </ChildContent>
         </MudMenu>
