--- a/SchulCloud.Frontend/Components/_Imports.razor
+++ b/SchulCloud.Frontend/Components/_Imports.razor
@@ -10,7 +10,8 @@
 @using Routes = SchulCloud.Frontend.Routes
 @using SchulCloud.Frontend.Components
 @using SchulCloud.Frontend.Components.Forms
+@using SchulCloud.Frontend.Components.Utils
 @using SchulCloud.Frontend.Components.Styles
 @using SchulCloud.Frontend.Components.Dialogs
-@using MudBlazor;
+@using MudBlazor
 @using MaterialSymbols = MudBlazor.FontIcons.MaterialSymbols
