Some small changes -Moved ClaimsCultureProvider into UserContext namespace -Changed asset paths for better static resource asset resolution -Updated some NuGet packages

--- a/SchulCloud.Frontend/Components/Utils/FaviconLinks.razor
+++ b/SchulCloud.Frontend/Components/Utils/FaviconLinks.razor
@@ -2,5 +2,5 @@
 
 @foreach (PresentationOptions.Favicon favicon in PresentationOptionsAccessor.Value.Favicons)
 {
-    <link rel="icon" href="@favicon.Path" type="@favicon.MimeType" sizes="@favicon.Sizes" />
+    <link rel="icon" href="@Assets[favicon.Path]" type="@favicon.MimeType" sizes="@favicon.Sizes" />
 }
