--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -12,10 +12,11 @@
     <HeadOutlet @rendermode="InteractiveServer" />
     <FaviconLinks />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="@Assets["/_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
-    <link href="@Assets["/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css"]" rel="stylesheet" />
-    <link href="@Assets["/_content/SchulCloud.Frontend.styles.css"]" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" />
+    <link rel="stylesheet" href="@Assets["_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css"]" />
+    <link rel="stylesheet" href="@Assets["_content/SchulCloud.Frontend.styles.css"]" />
+    <ImportMap />
 </head>
 
 <body>
@@ -27,9 +28,9 @@
 
     <CookieConsent />
 
-    <script src="/_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="@Assets["/_content/MudBlazor/MudBlazor.min.js"]" data-cookie-consent="strictly-necessary"></script>
-    <script src="@Assets["/_content/Frontend.min.js"]" data-cookie-consent="strictly-necessary"></script>
+    <script src="_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]" data-cookie-consent="strictly-necessary"></script>
+    <script src="@Assets["_content/Frontend.min.js"]" data-cookie-consent="strictly-necessary"></script>
 </body>
 
 </html>
